--- a/angular.json
+++ b/angular.json
@@ -79,24 +79,19 @@
             "browserTarget": "B-app:build"
           }
         },
+       
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
-            "tsConfig": "tsconfig.spec.json",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": []
-          }
-        }
+  "builder": "@angular-devkit/build-angular:karma",
+  "options": {
+    "main": "src/test.ts",
+    "polyfills": "src/polyfills.ts",
+    "tsConfig": "tsconfig.spec.json",
+    "karmaConfig": "./karma.conf.js",
+    "assets": ["src/favicon.ico", "src/assets"],
+    "styles": ["src/styles.css"],
+    "scripts": []
+  }
+}
       }
     }
   },
